--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^3.2.6",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "router": "^1.3.8"
   }
 }
