--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "mongoose": "^6.2.10",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "router": "^1.3.8",
+    "session": "^0.1.0",
     "uuid": "^9.0.1"
   }
 }
